tests/test_files_pa3/external/errors/ComplexInitError.ic

class A {

     static void main(string[] args){}
     
     void complexInit() {
     
           int a;
     
            if (true) {
            
                a = 1;
                
            } else {
            
                    if (true) {
                    
                        a = 2;
                    
                    } else {
                
                        {
                    
                        if (true) {
                               
                             a = 2;
                             
                        } 
                        
                        }
                    }
             }
             
             int b = a + 3;
      }   
        
}